--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,35 +1,41 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) {
-    body, html{
-        background-image: linear-gradient(to bottom, rgb(104, 50, 136), rgb(75, 148, 161));
-        background-attachment: fixed;
+@media screen and (min-width: 768px) and (max-width: 992px){
+    body{
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
-    main{
-        position: absolute;
-        width: 70vw;
-        height: 260px;
+    section#login{
+        width: 80vw;
+        float: right;
     }
-    div#imagem{
-        display: inline-block;
-        width: 35%;
+    section#login > div#imagem{
+        float: left;
+        width: 30%;
         height: 100%;
-        margin: 0px;
     }
-    div#imagem img{
-        position: relative;
-        height: 100%;
-        width: 100%;
-    }
-    img#cel{
-        display: none;
-    }
-    img#tablet{
-        display: block;
-    }
-    div#formulario{
-        display: inline-block;
-        width: 59%;
-        height: 100%;
+    section#login > div#formulario{
+        float: right;
+        width: 70%;
     }
 }
+
+@media screen and (min-width: 992px) {
+    body{
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
+
+    section#login{
+        width:950px;
+    }
+
+    section#login > div#imagem{
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+    section#login > div#formulario {
+        float: right;
+        width: 50%;
+    }
+}
+    
