--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,3 +45,51 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario > p {
+    font-size: 0.8em;
+}
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form > input[type=submit]:hover{
+    background-color: #326e6c;
+}
+a.botão{
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    padding-top: 5px;
+    margin-top: 5px;
+    text-align: center;
+    color: black;
+    text-decoration: none;  
+}
+a.botão:hover{
+    background-color: #49a09d;
+}
+a.botão > i{
+    font-size: 0.8em;
+}
