--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px){
+@media screen and (min-width: 768px) and (max-width: 992px){ /* CONFIGURAÇÕES PARA TABLET */
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login{
         width: 80vw;
+        height: 280px;
         float: right;
     }
     section#login > div#imagem{
@@ -19,15 +20,14 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /* CONFIGURAÇÕES PARA DESKTOP */
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
-
     section#login{
         width:950px;
+        height: 315px;
     }
-
     section#login > div#imagem{
         float: right;
         width: 50%;
