--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,14 +23,15 @@ main{
 section#login{
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 50%; 
     background-color: white;
     width: 250px;
     height: 500px;
     border-radius: 20px;
-    overflow: hidden;
+    overflow: hidden; 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.486);
+    /* transisoes e trasformações sempre no final */
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -50,17 +51,39 @@ div#formulario > h1{
     margin-bottom: 10px;
 }
 div#formulario > p {
-    font-size: 0.8em;
+    font-size: 0.9em;
+    margin-bottom: 10px;
 }
 form > div.campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
     border-radius: 5px;
     margin: 5px 0px;
 }
-
+div.campo i {
+    color: white;
+    /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input {
+    background-color: #78d6d3;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+div.campo > input:focus-within{
+    background-color: white;
+    border:none;
+}
 form > input[type=submit] {
     display: block;
     font-size: 1em;
